MDEV-27817 InnoDB recovery of recently created files is not crash-safe

Before commit 86dc7b4d4cfe15a2d37f8b5f60c4fce5dba9491d (MDEV-24626)
all tablespace ID that needed recovery were known already in
recv_init_crash_recovery_spaces().

recv_sys_t::recover_deferred(): Invoke fil_names_dirty(space) on
the newly initialized tablespace. In this way, if the next log
checkpoint occurs at some LSN that is after the initialization of
the tablespace and before the last recovered LSN, a FILE_MODIFY
record will be written, so that a subsequent recovery will succeed.

The recovery was broken when
commit 0261eac57f137c5daae90f5bb1eaa4bf48ee431b merged the 10.5
commit f443cd11007ab89512d4141472cbd9d3b524bad6 (MDEV-27022).